# datastream-curator

./: CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
src/datastream_curator/: __init__.py  cli.py  config.py  core.py  diff.py  enhanced_diff.py  llm.py  models.py
tests/: conftest.py  test_config.py  test_core.py  test_diff.py  test_enhanced_diff.py  test_enhanced_integration.py  test_integration.py  test_llm.py
tests/fixtures/: existing_kb.md  sample_input.json
tests/integration/: test_full_workflow.py
tests/system_test/: test_system.py
